--- a/models/marts/core/src_spotify_playlists.yml
+++ b/models/marts/core/src_spotify_playlists.yml
@@ -9,5 +9,5 @@ sources:
       - name: master
         description: raw playlist tracks data
         columns:
-          name: added_at
-          description: The date and time the track or episode was added.
+          - name: added_at
+            description: The date and time the track or episode was added.
