--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ logs/
 # Ignore editor settings for VS Code.
 .vscode
 
-# Ignore all virtual environments.
+# Ignore virtual environments.
 venv
+env
